20-sg-rules/main.tf
#Mongodb allowing connections from catalogue
resource "aws_security_group_rule" "mangodb_catalogue" {
  type              = "ingress"
  from_port         = 27017 
  to_port           = 27017 
  protocol          = "tcp"
  source_security_group_id = local.catalogue_sg_id
  security_group_id = local.mongodb_sg_id
}
#Mongodb allowing connections from user
resource "aws_security_group_rule" "mangodb_user" {
  type              = "ingress"
  from_port         = 27017 
  to_port           = 27017 
  protocol          = "tcp"
  source_security_group_id = local.user_sg_id
  security_group_id = local.mongodb_sg_id
}
#Mongodb allowing connections from bastion
resource "aws_security_group_rule" "mangodb_bastion" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.mongodb_sg_id
}

#Redis allowing connections from bastion
resource "aws_security_group_rule" "redis_bastion" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.redis_sg_id
}
#Redis allowing connections from user
resource "aws_security_group_rule" "redis_user" {
  type              = "ingress"
  from_port         =  6379
  to_port           =  6379
  protocol          = "tcp"
  source_security_group_id = local.user_sg_id
  security_group_id = local.redis_sg_id
}
#Redis allowing connections from cart
resource "aws_security_group_rule" "redis_cart" {
  type              = "ingress"
  from_port         =  6379
  to_port           =  6379
  protocol          = "tcp"
  source_security_group_id = local.cart_sg_id
  security_group_id = local.redis_sg_id
}

#mysql allowing connections from shipping
resource "aws_security_group_rule" "mysql_shipping" {
  type              = "ingress"
  from_port         =  3306
  to_port           =  3306
  protocol          = "tcp"
  source_security_group_id = local.shipping_sg_id
  security_group_id = local.mysql_sg_id
}
#mysql allowing connections from bastion
resource "aws_security_group_rule" "mysql_bastion" {
  type              = "ingress"
  from_port         =  22
  to_port           =  22
  protocol          = "tcp"
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.mysql_sg_id
}
#rabbitmq allowing connections from payment
resource "aws_security_group_rule" "rabbitmq_payment" {
  type              = "ingress"
  from_port         =  5672
  to_port           =  5672
  protocol          = "tcp"
  source_security_group_id = local.payment_sg_id
  security_group_id = local.rabbitmq_sg_id
}
#rabbitmq allowing connections from bastion
resource "aws_security_group_rule" "rabbitmq_bastion" {
  type              = "ingress"
  from_port         =  22
  to_port           =  22
  protocol          = "tcp"
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.rabbitmq_sg_id
}
#catalogue allowing connections from backend_alb
resource "aws_security_group_rule" "catalogue_backend_alb" {
  type              = "ingress"
  from_port         =  8080
  to_port           =  8080
  protocol          = "tcp"
  source_security_group_id = local.backend_alb_sg_id
  security_group_id = local.catalogue_sg_id
}
#catalogue allowing connections from bastion
resource "aws_security_group_rule" "catalogue_bastion"{
  type              = "ingress"
  from_port         =  22
  to_port           =  22
  protocol          = "tcp"
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.catalogue_sg_id
}
#user allowing connections from backend_alb
resource "aws_security_group_rule" "user_backend_alb"{
  type              = "ingress"
  from_port         =  22
  to_port           =  22
  protocol          = "tcp"
  source_security_group_id = local.backend_alb_sg_id
  security_group_id = local.user_sg_id
}
#user allowing connections from bastion
resource "aws_security_group_rule" "user_bastion"{
  type              = "ingress"
  from_port         =  22
  to_port           =  22
  protocol          = "tcp"
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.user_sg_id
}

#cart allowing connections from backend_alb
resource "aws_security_group_rule" "cart_backend_alb"{
  type              = "ingress"
  from_port         =  8080
  to_port           =  8080
  protocol          = "tcp"
  source_security_group_id = local.backend_alb_sg_id
  security_group_id = local.cart_sg_id
}
#cart allowing connections from bastion
resource "aws_security_group_rule" "cart_bastion"{
  type              = "ingress"
  from_port         =  22
  to_port           =  22
  protocol          = "tcp"
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.cart_sg_id
}

#shipping allowing connections from bastion
resource "aws_security_group_rule" "shipping_bastion"{
  type              = "ingress"
  from_port         =  22
  to_port           =  22
  protocol          = "tcp"
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.shipping_sg_id
}
#payment allowing connections from backend_alb
resource "aws_security_group_rule" "shipping_backend_alb"{
  type              = "ingress"
  from_port         =  8080
  to_port           =  8080
  protocol          = "tcp"
  source_security_group_id = local.backend_alb_sg_id
  security_group_id = local.shipping_sg_id

}

#payment allowing connections from bastion
resource "aws_security_group_rule" "payment_bastion"{
  type              = "ingress"
  from_port         =  22
  to_port           =  22
  protocol          = "tcp"
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.payment_sg_id
}
#payment allowing connections from backend_alb
resource "aws_security_group_rule" "payment_backend_alb"{
  type              = "ingress"
  from_port         =  8080
  to_port           =  8080
  protocol          = "tcp"
  source_security_group_id = local.backend_alb_sg_id
  security_group_id = local.payment_sg_id
}

#backend_alb allowing connections from frontend
resource "aws_security_group_rule" "backend_alb_frontend"{
  type              = "ingress"
  from_port         =  80
  to_port           =  80
  protocol          = "tcp"
  source_security_group_id = local.frontend_sg_id
  security_group_id = local.backend_alb_sg_id
}
#backend_alb allowing connections from bastion
resource "aws_security_group_rule" "backend_alb_bastion"{
  type              = "ingress"
  from_port         =  80
  to_port           =  80
  protocol          = "tcp"
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.backend_alb_sg_id
}
#backend_alb allowing connections from catalogue
resource "aws_security_group_rule" "backend_alb_catalogue"{
  type              = "ingress"
  from_port         =  80
  to_port           =  80
  protocol          = "tcp"
  source_security_group_id = local.catalogue_sg_id
  security_group_id = local.backend_alb_sg_id
}
#backend_alb allowing connections from user
resource "aws_security_group_rule" "backend_alb_user"{
  type              = "ingress"
  from_port         =  80
  to_port           =  80
  protocol          = "tcp"
  source_security_group_id = local.user_sg_id
  security_group_id = local.backend_alb_sg_id
}
#backend_alb allowing connections from cart
resource "aws_security_group_rule" "backend_alb_cart"{
  type              = "ingress"
  from_port         =  80
  to_port           =  80
  protocol          = "tcp"
  source_security_group_id = local.cart_sg_id
  security_group_id = local.backend_alb_sg_id
}
#backend_alb allowing connections from shipping
resource "aws_security_group_rule" "backend_alb_shipping"{
  type              = "ingress"
  from_port         =  80
  to_port           =  80
  protocol          = "tcp"
  source_security_group_id = local.shipping_sg_id
  security_group_id = local.backend_alb_sg_id
}

#backend_alb allowing connections from shipping
resource "aws_security_group_rule" "backend_alb_payment"{
  type              = "ingress"
  from_port         =  80
  to_port           =  80
  protocol          = "tcp"
  source_security_group_id = local.payment_sg_id
  security_group_id = local.backend_alb_sg_id
}
#frontend allowing connections from frontend_alb
resource "aws_security_group_rule" "frontend_frontend_alb"{
  type              = "ingress"
  from_port         =  80
  to_port           =  80
  protocol          = "tcp"
  source_security_group_id = local.frontend_alb_sg_id
  security_group_id = local.frontend_sg_id
}
resource "aws_security_group_rule" "frontend_bastion"{
  type              = "ingress"
  from_port         =  80
  to_port           =  80
  protocol          = "tcp"
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.frontend_sg_id
}
#Frontend_alb - http
resource "aws_security_group_rule" "frontend_alb_http"{
  type              = "ingress"
  from_port         =  80
  to_port           =  80
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = local.frontend_alb_sg_id
}

#Frontend_alb - https
resource "aws_security_group_rule" "frontend_alb_https"{
  type              = "ingress"
  from_port         =  443
  to_port           =  443
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = local.frontend_alb_sg_id
}

#bastion
resource "aws_security_group_rule" "bastion_my_public_ip"{
  type              = "ingress"
  from_port         =  22
  to_port           =  22
  protocol          = "tcp"
   cidr_blocks = ["${chomp(data.http.my_public_ip.response_body)}/32"]
  security_group_id = local.bastion_sg_id
}
